fix overflow

--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -7,18 +7,24 @@ body {
   }
 }
 
+.App {
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+}
+
 // Background Image
 .background {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
   z-index: -1;
 
   &__img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    
   }
 
   &::after {
@@ -36,7 +42,7 @@ body {
 .quote {
   font-family: $font-secondary;
   color: $col-white;
-  height: 15vh;
+  height: 20vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -61,7 +67,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  height: 85vh;
+  height: 80vh;
   display: flex;
   justify-content: center;
   flex-direction: column;
