--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -6,7 +6,7 @@ html {
 *,
 *::after,
 *::before {
-  box-sizing: inherti;
+  box-sizing: inherit;
   margin: 0;
   padding: 0;
 }
